--- a/package.json
+++ b/package.json
@@ -5,19 +5,30 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:vercel": "vercel dev --yes",
+    "dev:api": "tsx api/dev-server.ts",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\"",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@types/express": "^5.0.5",
+    "@vercel/node": "^5.5.12",
+    "express": "^5.1.0",
+    "openai": "^6.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "~5.9.3",
-    "vite": "^7.2.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^9.2.1",
+    "dotenv": "^17.2.3",
+    "tsx": "^4.20.6",
+    "typescript": "~5.9.3",
+    "vercel": "^48.11.0",
+    "vite": "^7.2.4"
   }
 }
