--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@emailjs/browser": "^4.4.1",
     "@types/express": "^5.0.5",
     "@vercel/node": "^5.5.12",
+    "docx": "^9.5.1",
     "express": "^5.1.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.4",
     "openai": "^6.9.1",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
