fix of vercel to read openai api and logs

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,16 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
+  "functions": {
+    "api/chat.ts": {
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
 
